--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -41,6 +41,7 @@
 \input{simulation}
 \input{geometry}
 
+
 % mice modules documentation originally from open office - hence some weirdness
 % historical MiceModule.pdf document in doc/doc_src/run_control
 \input{mice_modules/mice_module_bureaucracy} % just some definitions for latex
@@ -56,6 +57,7 @@
 
 \input{envelope_tool} % envelope utility - could be an appendix
 
+\input{G4BLMAUSInterface}
 
 %\chapter{Geometry}
 %\include{geometry_definitions}
