fix geometry documentation - LaTeX

--- a/doc/doc_src/geometry.tex
+++ b/doc/doc_src/geometry.tex
@@ -185,7 +185,7 @@ root directory)
       --get_ids_start_time ``1974-01-01 00:00:00'' --get_ids_stop_time ``2015-01-01 00:00:00''
 \end{verbatim}
 By default, the output file is saved to
-\$MAUS_ROOT_DIR/tmp/geometry_ids.txt. The typical output looks like
+\$MAUS\_ROOT\_DIR/tmp/geometry\_ids.txt. The typical output looks like
 the following:
 \begin{verbatim}
 [...]
@@ -268,7 +268,7 @@ function can be completed using the following command:
 > python bin/utilities/download_fit_geometry.py --geometry_download_by current
 \end{verbatim}
 All of these commands described will by default place the geometry in
-the directory \${MAUS_ROOT_DIR}/files/geometry/download. This
+the directory \${MAUS\_ROOT\_DIR}/files/geometry/download. This
 directory may be changed using the
 \verb+--geometry_download_directory+ flag. To use the downloaded
 geometry in the simulation, the \verb+--simulation_geometry_filename+
