Global PID documentation added to MAUS user guide

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -55,6 +55,8 @@
 %\include{detectors/ckov}
 %\include{detectors/kl}
 
+\input{reconstruction/globalpid/globalpid.tex}
+
 \input{envelope_tool} % envelope utility - could be an appendix
 
 \input{G4BLMAUSInterface}
