--- a/doc/doc_src/introduction.tex
+++ b/doc/doc_src/introduction.tex
@@ -29,9 +29,6 @@ MAUS contains several applications to perform various tasks. Two main applicatio
  > ${MAUS_ROOT_DIR}/bin/analyze_data_offline.py
 \end{verbatim}
 
-\section{Choosing the Unpacker Version}
-The unpacker is the third party library shipped with MAUS used to unpack the MICE DAQ binary data.  It comes in two versions, for Step I data and Step IV data.  The current default unpacker version is Step I.  In order to switch unpacker versions, the file env.sh in the MAUS root directory must be edited, so that the variable \texttt{MAUS\_UNPACKER\_VERSION} reads either ``StepI'' or ``StepIV'' as desired. After the variable has been changed, a clean shell must be launched, the env.sh script must be sourced, and the MAUS build cleaned and rebuilt with the command \texttt{scons -c; scons -j8}.
-
 \subsection{Run Control}
 The routines can be controlled by a number of settings that enable users to specify run configurations, as specified in this document. Most control variables can be controlled directly from the comamnd line, for example doing
 \begin{verbatim}
@@ -80,6 +77,9 @@ There are several other applications in the \verb|bin| directory and associated 
 \item \verb|bin/user| contains analysis functions that our users have found useful, but are not necessarily thoroughly tested or documented
 \item \verb|bin/publications| contains analysis code used for writing a particular (MICE) publication
 \end{itemize}
+
+\subsection{Choosing the Unpacker Version}
+The unpacker is the third party library shipped with MAUS used to unpack the MICE DAQ binary data.  It comes in two versions, one for Step I data and one for Step IV data.  The current default unpacker version is Step I.  In order to switch unpacker versions, the file env.sh in the MAUS root directory must be edited, so that the variable \texttt{MAUS\_UNPACKER\_VERSION} reads either ``StepI'' or ``StepIV'' as desired. After the variable has been changed, a clean shell must be launched, the env.sh script sourced and the unpacking installation script \texttt{third\_party/bash/53unpacking.bash} run. Finally, the MAUS build must be cleaned and rebuilt with the command \texttt{scons -c; scons -j8}.
 
 \section{Accessing Data}
 By default, MAUS writes data as a ROOT file. ROOT is a widely available high energy physics data analysis library, available from \url{''http://root.cern.ch''} and prepacked with the MAUS third party libraries. Two techniques are foreseen for accessing the data, either using \verb|PyRoot| python interface or using a compiled C++ binary. Some mention of ROOT cint scripting tools is made below, but this is not supported by MAUS developers beyond the most basic usage.
